styled navbar links and fixed z-index for modal

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -135,7 +135,7 @@
 .profile-avatar {
     position: relative;
     cursor: pointer;
-    margin-right: 30px;
+    padding-right: 10px;
     margin-left: 20px;
     z-index: 1;
     text-decoration: none;
@@ -169,13 +169,6 @@
 .navbar-btn.active
 {
     color: #f5f5f5;
-}
-
-.profile-avatar__image{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
 }
 
 /* responsive queries*/
@@ -246,6 +239,7 @@
     {
         display: flex;
         margin: 0;
+        padding-right: 3px;
     }
 
     .profile-avatar span
