--- a/react-app/src/components/Splash/SplashLinks.css
+++ b/react-app/src/components/Splash/SplashLinks.css
@@ -23,6 +23,7 @@
     font-size: 20px;
     margin-left: 5px;
     color: #0066cc;
+    margin-top: 6px;
 }
 
 .splash_link__city_create i:hover
